I decided to make the field of Descricao bigger, so i updated the class and the BD

--- a/service/src/main/resources/templates/newCompraForm.html
+++ b/service/src/main/resources/templates/newCompraForm.html
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <p style="margin: 5px 0;">Descrição:</p>
-                <textarea maxlength="255" th:field="*{descricao}" class="form-control" placeholder="Quatro blusas brancas&#10Três casacos" required></textarea>
+                <textarea th:field="*{descricao}" class="form-control" placeholder="Quatro blusas brancas&#10Três casacos" required></textarea>
             </div>
             <div style="display:flex; margin-top: 7px">
                 <div style='margin-left: auto;'>
