Now Cliente has Endereço

--- a/service/src/main/resources/templates/clienteFormUpdate.html
+++ b/service/src/main/resources/templates/clienteFormUpdate.html
@@ -30,6 +30,10 @@
                         <p style="margin: 5px 0;">Celular:</p>
                         <input type="text" th:field="*{celular}" class="form-control" data-js="phone" id="celular">
                     </div>
+                    <div class="form-group">
+                        <p style="margin: 5px 0;">Endereço:</p>
+                        <input type="text" th:field="*{endereco}" class="form-control" data-js="address" id="endereco">
+                    </div>
                     <div style="display:flex; margin-top: 7px">
                         <div style='margin-left: auto;'>
                             <button style="padding: 0; margin: 0; border-width:0; background-color: #FFFFFF;" type="submit">
