--- a/service/src/main/resources/templates/newCompraForm.html
+++ b/service/src/main/resources/templates/newCompraForm.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Formulario para adicionar uma nova compra</title>
     <!--CSS-BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!--CSS-ICON GOOGLE-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
@@ -19,30 +20,60 @@
 </header>
 <main class="container" style="width: 65%;">
     <div>
-        <form th:action="@{/saveCompra/}" th:object="${compra}" method="POST" >
+        <form id="form" th:action="@{/saveCompra/}" th:object="${compra}" method="post">
             <input th:field="*{cliente.id}" type="hidden"/>
-            <div class="form-group">
+            <div class="form-group" style="display:none;">
                 <p style="margin: 5px 0;">Valor:</p>
-                <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" max="10000.00" step="0.01" required>
+                <input id="valor" type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00"
+                       max="10000.00" step="0.01" required>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="display:none;">
                 <p style="margin: 5px 0;">Descrição:</p>
-                <textarea th:field="*{descricao}" class="form-control" placeholder="Quatro blusas brancas&#10Três casacos" required></textarea>
+                <textarea id="descricao" th:field="*{descricao}" class="form-control"
+                          placeholder="Quatro blusas brancas&#10Três casacos" required></textarea>
             </div>
-            <div style="display:flex; margin-top: 7px">
-                <div style='margin-left: auto;'>
-                    <button style="padding: 0; margin: 0; border-width:0; background-color: #FFFFFF;" type="submit">
-                        <span class="btn btn-success btn-sm rounded-pill editLink material-icons" style="padding:0.4em">check</span>
-                    </button>
-                    <script>
+            <div class="produto">
+                <p>Produto 1</p>
+                <hr>
+                <div class="form-group">
+                    <p style="margin: 5px 0;">Quantidade:</p>
+                    <input type="number" class="form-control qtdProduto" onClick="this.select();" min="1" max="99" placeholder="3"
+                           required>
+                </div>
+                <div class="form-group">
+                    <p style="margin: 5px 0;">Descrição:</p>
+                    <input type="text" class="form-control descProduto" placeholder="Blusa Nike azul" required>
+                </div>
+                <div class="form-group">
+                    <p style="margin: 5px 0;">Valor Unitário:</p>
+                    <input type="number" class="form-control valProduto" onClick="this.select();" min="1.00" step="0.01" required>
+                </div>
+                <hr>
+            </div>
+
+        </form>
+        <div style="display:flex; margin-top: 7px">
+            <div style='margin-left: auto;'>
+                <button id="btnAddProduto"
+                        style="padding: 0; margin: 0; border-width:0;background-color: #FFFFFF;">
+                    <span class="btn btn-success btn-sm rounded-pill editLink material-icons"
+                          style="background-color:#3b83bd; border-color:#3b83bd;padding:0.4em">add</span>
+                </button>
+                <button id="btnSaveCompra"
+                        style="padding: 0; margin: 0; border-width:0; background-color: #FFFFFF;">
+                    <span class="btn btn-success btn-sm rounded-pill editLink material-icons" style="padding:0.4em">check</span>
+                </button>
+                <script>
                         document.write('<a href="' + document.referrer + '">'+
                             '<span class="btn btn-danger btn-sm rounded-pill editLink material-icons "'+
                             'style="padding:0.4em">close</span></a>');
+
                     </script>
-                </div>
             </div>
-        </form>
+        </div>
     </div>
 </main>
+<script src="/js/addProduto.js"></script>
+<script src="/js/saveCompra.js"></script>
 </body>
 </html>
