--- a/service/src/main/resources/templates/updateCompraForm.html
+++ b/service/src/main/resources/templates/updateCompraForm.html
@@ -24,11 +24,11 @@
             <input th:field="*{cliente.id}" type="hidden"/>
             <input th:field="*{id}" type="hidden"/>
             <input type="hidden" th:field="*{data}" />
-            <div class="form-group">
+            <div class="form-group" style="display:none;">
                 <p style="margin: 5px 0;">Valor:</p>
                 <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" step="0.01"  required>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="display:none;">
                 <p style="margin: 5px 0;">Descrição:</p>
                 <textarea th:field="*{descricao}" class="form-control" placeholder="Quatro blusas brancas&#10Três casacos" required></textarea>
             </div>
