Inserting bootstrap js offline.

--- a/service/src/main/resources/templates/clienteForm.html
+++ b/service/src/main/resources/templates/clienteForm.html
@@ -50,4 +50,5 @@
     </body>
     <script src="/js/celular.js"></script>
     <script src="/js/vanilla.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </html>
