--- a/service/src/main/resources/templates/updateCompraForm.html
+++ b/service/src/main/resources/templates/updateCompraForm.html
@@ -57,5 +57,6 @@
 <script src="/js/addProduto.js"></script>
 <script src="/js/saveCompra.js"></script>
 <script src="/js/uploadCompra.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
