--- a/service/src/main/resources/templates/clienteFormUpdate.html
+++ b/service/src/main/resources/templates/clienteFormUpdate.html
@@ -52,4 +52,5 @@
     </body>
     <script src="/js/celular.js"></script>
     <script src="/js/vanilla.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </html>
