--- a/service/src/main/resources/templates/extratoVazio.html
+++ b/service/src/main/resources/templates/extratoVazio.html
@@ -25,7 +25,7 @@
         <a title="Registrar uma nova compra do cliente" th:href="@{/{idCliente}/newCompra/(idCliente=${cliente.id})}" ><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons md-48" style="margin: 0.5em 0.5em;">shopping_cart</span></a>
     </figure>
 </main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script src="/js/script.js"></script>
 </body>
 </html>
