--- a/service/src/main/resources/templates/newCompraForm.html
+++ b/service/src/main/resources/templates/newCompraForm.html
@@ -75,5 +75,6 @@
 </main>
 <script src="/js/addProduto.js"></script>
 <script src="/js/saveCompra.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
