--- a/service/src/main/resources/templates/newCompraForm.html
+++ b/service/src/main/resources/templates/newCompraForm.html
@@ -22,6 +22,10 @@
     <div>
         <form id="form" th:action="@{/saveCompra/}" th:object="${compra}" method="post">
             <input th:field="*{cliente.id}" type="hidden"/>
+            <div class="form-group">
+                <p style="margin: 5px 0;">Dia da compra:</p>
+                <input th:field="*{data}" class="form-control" type="datetime-local">
+            </div>
             <div class="form-group" style="display:none;">
                 <p style="margin: 5px 0;">Valor:</p>
                 <input id="valor" type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00"
