--- a/service/src/main/resources/templates/newPagamentoForm.html
+++ b/service/src/main/resources/templates/newPagamentoForm.html
@@ -23,6 +23,10 @@
         <form th:action="@{/savePagamento/}" th:object="${pagamento}" method="POST" >
             <input th:field="*{cliente.id}" type="hidden"/>
             <div class="form-group">
+                <p style="margin: 5px 0;">Dia do pagamento:</p>
+                <input th:field="*{data}" class="form-control" type="datetime-local">
+            </div>
+            <div class="form-group">
                 <p style="margin: 5px 0;">Valor:</p>
                 <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" step="0.01" required>
             </div>
